trying to compute the lower bound, replaced some variables, still issues

--- a/bab_runner.ipynb
+++ b/bab_runner.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "{'CodeCell': {'cm_config': {'autoCloseBrackets': False}}}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -25,11 +25,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from plnn.mnist_basic import Net\n",
+    "from plnn.mnist_sequential import Net\n",
     "import torch\n",
     "import torch.nn as nn\n",
     "from torchvision.datasets.mnist import MNIST\n",
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,12 +51,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "model = Net()\n",
-    "model.load_state_dict(torch.load('save/mnist_cnn.pt'))\n",
+    "model.load_state_dict(torch.load('save/mnist_sequential_cnn.pt'))\n",
     "model.cuda()\n",
     "dataset = MNIST('./data', train=True, download=True,\n",
     "                transform=transforms.Compose([\n",
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,9 +291,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([784])\n",
+      "[10, 1024, 784]\n",
+      "torch.Size([10, 1024, 784])\n",
+      "torch.Size([10, 1024, 784])\n",
+      "torch.Size([10, 784])\n",
+      "torch.Size([10, 784])\n",
+      "torch.Size([10, 784])\n",
+      "torch.Size([10, 1, 784])\n",
+      "torch.Size([10, 1, 784])\n",
+      "torch.Size([10, 1024, 784])\n",
+      "torch.Size([10, 1024, 784])\n",
+      "torch.Size([10, 1024, 784])\n",
+      "torch.Size([10, 1024, 784])\n",
+      "torch.Size([10, 1024, 784])\n",
+      "[10240, 784]\n",
+      "torch.Size([10, 1, 28, 28])\n",
+      "[10240, 1, 28, 28]\n",
+      "torch.Size([10240, 1, 28, 28])\n",
+      "torch.Size([10, 1024, 784])\n",
+      "torch.Size([10240, 10])\n",
+      "tensor([-1.1008e+01, -1.5361e+01, -8.2838e+00, -6.8696e+00, -1.4873e+01,\n",
+      "        -1.0944e+01, -2.1493e+01, -1.4343e-03, -1.0063e+01, -9.6500e+00],\n",
+      "       device='cuda:0', grad_fn=<SelectBackward>)\n",
+      "tensor([-1.1007e+01, -1.5360e+01, -8.2816e+00, -6.8684e+00, -1.4875e+01,\n",
+      "        -1.0946e+01, -2.1492e+01, -1.4362e-03, -1.0062e+01, -9.6482e+00],\n",
+      "       device='cuda:0', grad_fn=<SelectBackward>)\n",
+      "tensor([[7],\n",
+      "        [2],\n",
+      "        [1],\n",
+      "        [0],\n",
+      "        [4],\n",
+      "        [1],\n",
+      "        [4],\n",
+      "        [9],\n",
+      "        [5],\n",
+      "        [9]])\n",
+      "torch.Size([10, 1024])\n",
+      "tensor([[7, 7, 7,  ..., 7, 7, 7],\n",
+      "        [2, 2, 2,  ..., 2, 2, 2],\n",
+      "        [1, 1, 1,  ..., 1, 1, 1],\n",
+      "        ...,\n",
+      "        [9, 9, 9,  ..., 9, 9, 9],\n",
+      "        [5, 5, 5,  ..., 5, 5, 5],\n",
+      "        [9, 9, 9,  ..., 9, 9, 9]])\n",
+      "torch.Size([10240])\n",
+      "torch.Size([10240, 10])\n",
+      "torch.Size([10])\n",
+      "torch.Size([10240, 1])\n",
+      "torch.Size([10240, 1])\n",
+      "torch.Size([10, 1024])\n",
+      "torch.Size([10])\n",
+      "torch.Size([10])\n",
+      "tensor([ 511,   18,  983,  224,  728,  500,  306,  201, 1005,   24],\n",
+      "       device='cuda:0')\n",
+      "tensor([-1.4420e-03, -2.4986e-03, -9.0170e-03, -5.1594e-04, -1.0933e-02,\n",
+      "        -3.6516e-03, -6.2790e-03, -1.9007e-03, -6.9532e-01, -7.2861e-03],\n",
+      "       device='cuda:0', grad_fn=<MinBackward0>)\n",
+      "idx size torch.Size([10])\n",
+      "inps size torch.Size([10, 1024, 784])\n",
+      "tensor(511, device='cuda:0')\n",
+      "single size torch.Size([784])\n",
+      "single size torch.Size([784])\n",
+      "single size torch.Size([784])\n",
+      "tensor([[-0.4241, -0.4235, -0.4251,  ..., -0.4251, -0.4252, -0.4252],\n",
+      "        [-0.4246, -0.4240, -0.4238,  ..., -0.4249, -0.4244, -0.4236],\n",
+      "        [-0.4245, -0.4244, -0.4241,  ..., -0.4235, -0.4248, -0.4241],\n",
+      "        ...,\n",
+      "        [-0.4249, -0.4238, -0.4233,  ..., -0.4234, -0.4243, -0.4247],\n",
+      "        [-0.4248, -0.4233, -0.4252,  ..., -0.4235, -0.4246, -0.4240],\n",
+      "        [-0.4235, -0.4233, -0.4252,  ..., -0.4246, -0.4242, -0.4240]])\n",
+      "torch.Size([10, 784])\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([[-0.4241, -0.4235, -0.4251,  ..., -0.4251, -0.4252, -0.4252],\n",
+       "         [-0.4246, -0.4240, -0.4238,  ..., -0.4249, -0.4244, -0.4236],\n",
+       "         [-0.4245, -0.4244, -0.4241,  ..., -0.4235, -0.4248, -0.4241],\n",
+       "         ...,\n",
+       "         [-0.4249, -0.4238, -0.4233,  ..., -0.4234, -0.4243, -0.4247],\n",
+       "         [-0.4248, -0.4233, -0.4252,  ..., -0.4235, -0.4246, -0.4240],\n",
+       "         [-0.4235, -0.4233, -0.4252,  ..., -0.4246, -0.4242, -0.4240]]),\n",
+       " tensor([-1.4420e-03, -2.4986e-03, -9.0170e-03, -5.1594e-04, -1.0933e-02,\n",
+       "         -3.6516e-03, -6.2790e-03, -1.9007e-03, -6.9532e-01, -7.2861e-03],\n",
+       "        device='cuda:0', grad_fn=<MinBackward0>))"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#test the method\n",
     "get_upper_bound(domain)"
@@ -301,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,9 +410,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Academic license - for non-commercial use only\n"
+     ]
+    }
+   ],
    "source": [
     "'''\n",
     "input_domain: Tensor containing in each row the lower and upper bound\n",
@@ -332,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,16 +500,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "mul(): argument 'other' (position 1) must be Tensor, not Var",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-15-70baa412700b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     21\u001b[0m                     \u001b[0mub\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mcoeff\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mlower_bounds\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mprev_neuron_idx\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m                     \u001b[0mlb\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mcoeff\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mupper_bounds\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mprev_neuron_idx\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 23\u001b[0;31m                 \u001b[0mlin_expr\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mcoeff\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mgurobi_vars\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mprev_neuron_idx\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     24\u001b[0m             v = gurobi_model.addVar(lb=lb, ub=ub, obj=0,\n\u001b[1;32m     25\u001b[0m                                   \u001b[0mvtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mgrb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mGRB\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mCONTINUOUS\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: mul(): argument 'other' (position 1) must be Tensor, not Var"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "\n",
     "## Do the other layers, computing for each of the neuron, its upper\n",
     "## bound and lower bound\n",
     "layer_idx = 1\n",
-    "for layer in self.layers:\n",
+    "for layer in model.layers:\n",
     "    new_layer_lb = []\n",
     "    new_layer_ub = []\n",
     "    new_layer_gurobi_vars = []\n",
@@ -414,31 +533,31 @@
     "            for prev_neuron_idx in range(layer.weight.size(1)):\n",
     "                coeff = layer.weight.data[neuron_idx, prev_neuron_idx]\n",
     "                if coeff >= 0:\n",
-    "                    ub += coeff*self.upper_bounds[-1][prev_neuron_idx]\n",
-    "                    lb += coeff*self.lower_bounds[-1][prev_neuron_idx]\n",
+    "                    ub += coeff*upper_bounds[-1][prev_neuron_idx]\n",
+    "                    lb += coeff*lower_bounds[-1][prev_neuron_idx]\n",
     "                else:\n",
-    "                    ub += coeff*self.lower_bounds[-1][prev_neuron_idx]\n",
-    "                    lb += coeff*self.upper_bounds[-1][prev_neuron_idx]\n",
-    "                lin_expr += coeff * self.gurobi_vars[-1][prev_neuron_idx]\n",
-    "            v = self.model.addVar(lb=lb, ub=ub, obj=0,\n",
+    "                    ub += coeff*lower_bounds[-1][prev_neuron_idx]\n",
+    "                    lb += coeff*upper_bounds[-1][prev_neuron_idx]\n",
+    "                lin_expr += coeff * gurobi_vars[-1][prev_neuron_idx]\n",
+    "            v = gurobi_model.addVar(lb=lb, ub=ub, obj=0,\n",
     "                                  vtype=grb.GRB.CONTINUOUS,\n",
     "                                  name=f'lay{layer_idx}_{neuron_idx}')\n",
-    "            self.model.addConstr(v == lin_expr)\n",
-    "            self.model.update()\n",
+    "            gurobi_model.addConstr(v == lin_expr)\n",
+    "            gurobi_model.update()\n",
     "\n",
-    "            self.model.setObjective(v, grb.GRB.MINIMIZE)\n",
-    "            self.model.optimize()\n",
-    "            assert self.model.status == 2, \"LP wasn't optimally solved\"\n",
+    "            gurobi_model.setObjective(v, grb.GRB.MINIMIZE)\n",
+    "            gurobi_model.optimize()\n",
+    "            assert gurobi_model.status == 2, \"LP wasn't optimally solved\"\n",
     "            # We have computed a lower bound\n",
     "            lb = v.X\n",
     "            v.lb = lb\n",
     "\n",
     "            # Let's now compute an upper bound\n",
-    "            self.model.setObjective(v, grb.GRB.MAXIMIZE)\n",
-    "            self.model.update()\n",
-    "            self.model.reset()\n",
-    "            self.model.optimize()\n",
-    "            assert self.model.status == 2, \"LP wasn't optimally solved\"\n",
+    "            gurobi_model.setObjective(v, grb.GRB.MAXIMIZE)\n",
+    "            gurobi_model.update()\n",
+    "            gurobi_model.reset()\n",
+    "            gurobi_model.optimize()\n",
+    "            assert gurobi_model.status == 2, \"LP wasn't optimally solved\"\n",
     "            ub = v.X\n",
     "            v.ub = ub\n",
     "\n",
@@ -446,18 +565,18 @@
     "            new_layer_ub.append(ub)\n",
     "            new_layer_gurobi_vars.append(v)\n",
     "    elif type(layer) == nn.ReLU:\n",
-    "        for neuron_idx, pre_var in enumerate(self.gurobi_vars[-1]):\n",
-    "            pre_lb = self.lower_bounds[-1][neuron_idx]\n",
-    "            pre_ub = self.upper_bounds[-1][neuron_idx]\n",
+    "        for neuron_idx, pre_var in enumerate(gurobi_vars[-1]):\n",
+    "            pre_lb = lower_bounds[-1][neuron_idx]\n",
+    "            pre_ub = upper_bounds[-1][neuron_idx]\n",
     "\n",
-    "            v = self.model.addVar(lb=max(0, pre_lb),\n",
+    "            v = gurobi_model.addVar(lb=max(0, pre_lb),\n",
     "                                  ub=max(0, pre_ub),\n",
     "                                  obj=0,\n",
     "                                  vtype=grb.GRB.CONTINUOUS,\n",
     "                                  name=f'ReLU{layer_idx}_{neuron_idx}')\n",
     "            if pre_lb >= 0 and pre_ub >= 0:\n",
     "                # The ReLU is always passing\n",
-    "                self.model.addConstr(v == pre_var)\n",
+    "                gurobi_model.addConstr(v == pre_var)\n",
     "                lb = pre_lb\n",
     "                ub = pre_ub\n",
     "            elif pre_lb <= 0 and pre_ub <= 0:\n",
@@ -469,11 +588,11 @@
     "            else:\n",
     "                lb = 0\n",
     "                ub = pre_ub\n",
-    "                self.model.addConstr(v >= pre_var)\n",
+    "                gurobi_model.addConstr(v >= pre_var)\n",
     "\n",
     "                slope = pre_ub / (pre_ub - pre_lb)\n",
     "                bias = - pre_lb * slope\n",
-    "                self.model.addConstr(v <= slope * pre_var + bias)\n",
+    "                gurobi_model.addConstr(v <= slope * pre_var + bias)\n",
     "\n",
     "            new_layer_lb.append(lb)\n",
     "            new_layer_ub.append(ub)\n",
@@ -481,7 +600,7 @@
     "    elif type(layer) == nn.MaxPool1d:\n",
     "        assert layer.padding == 0, \"Non supported Maxpool option\"\n",
     "        assert layer.dilation == 1, \"Non supported MaxPool option\"\n",
-    "        nb_pre = len(self.gurobi_vars[-1])\n",
+    "        nb_pre = len(gurobi_vars[-1])\n",
     "        window_size = layer.kernel_size\n",
     "        stride = layer.stride\n",
     "\n",
@@ -489,20 +608,20 @@
     "        pre_window_end = pre_start_idx + window_size\n",
     "\n",
     "        while pre_window_end <= nb_pre:\n",
-    "            lb = max(self.lower_bounds[-1][pre_start_idx:pre_window_end])\n",
-    "            ub = max(self.upper_bounds[-1][pre_start_idx:pre_window_end])\n",
+    "            lb = max(lower_bounds[-1][pre_start_idx:pre_window_end])\n",
+    "            ub = max(upper_bounds[-1][pre_start_idx:pre_window_end])\n",
     "\n",
     "            neuron_idx = pre_start_idx // stride\n",
     "\n",
-    "            v = self.model.addVar(lb=lb, ub=ub, obj=0, vtype=grb.GRB.CONTINUOUS,\n",
+    "            v = gurobi_model.addVar(lb=lb, ub=ub, obj=0, vtype=grb.GRB.CONTINUOUS,\n",
     "                                  name=f'Maxpool{layer_idx}_{neuron_idx}')\n",
     "            all_pre_var = 0\n",
-    "            for pre_var in self.gurobi_vars[-1][pre_start_idx:pre_window_end]:\n",
-    "                self.model.addConstr(v >= pre_var)\n",
+    "            for pre_var in gurobi_vars[-1][pre_start_idx:pre_window_end]:\n",
+    "                gurobi_model.addConstr(v >= pre_var)\n",
     "                all_pre_var += pre_var\n",
-    "            all_lb = sum(self.lower_bounds[-1][pre_start_idx:pre_window_end])\n",
+    "            all_lb = sum(lower_bounds[-1][pre_start_idx:pre_window_end])\n",
     "            max_pre_lb = lb\n",
-    "            self.model.addConstr(all_pre_var >= v + all_lb - max_pre_lb)\n",
+    "            gurobi_model.addConstr(all_pre_var >= v + all_lb - max_pre_lb)\n",
     "\n",
     "            pre_start_idx += stride\n",
     "            pre_window_end = pre_start_idx + window_size\n",
@@ -515,16 +634,16 @@
     "    else:\n",
     "        raise NotImplementedError\n",
     "\n",
-    "    self.lower_bounds.append(new_layer_lb)\n",
-    "    self.upper_bounds.append(new_layer_ub)\n",
-    "    self.gurobi_vars.append(new_layer_gurobi_vars)\n",
+    "    lower_bounds.append(new_layer_lb)\n",
+    "    upper_bounds.append(new_layer_ub)\n",
+    "    gurobi_vars.append(new_layer_gurobi_vars)\n",
     "\n",
     "    layer_idx += 1\n",
     "\n",
     "# Assert that this is as expected a network with a single output\n",
-    "assert len(self.gurobi_vars[-1]) == 1, \"Network doesn't have scalar output\"\n",
+    "assert len(gurobi_vars[-1]) == 1, \"Network doesn't have scalar output\"\n",
     "\n",
-    "self.model.update()"
+    "gurobi_model.update()"
    ]
   },
   {
