modified the network class to handle different labels without remaking the network

--- a/bab_runner.ipynb
+++ b/bab_runner.ipynb
@@ -26,11 +26,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from plnn.mnist_sequential import Net\n",
+    "from plnn.mini_net import Net\n",
     "import torch\n",
     "import torch.nn as nn\n",
     "from torchvision.datasets.mnist import MNIST\n",
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,12 +52,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "model = Net()\n",
-    "model.load_state_dict(torch.load('save/mnist_sequential_cnn.pt'))\n",
+    "model.load_state_dict(torch.load('save/mini_net.pt'))\n",
     "model.cuda()\n",
     "dataset = MNIST('./data', train=True, download=True,\n",
     "                transform=transforms.Compose([\n",
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -171,15 +171,15 @@
        "VerificationNetwork(\n",
        "  (property_layer): Linear(in_features=10, out_features=9, bias=False)\n",
        "  (out): Sequential(\n",
-       "    (0): Linear(in_features=784, out_features=256, bias=True)\n",
+       "    (0): Linear(in_features=784, out_features=10, bias=True)\n",
        "    (1): ReLU()\n",
-       "    (2): Linear(in_features=256, out_features=10, bias=True)\n",
+       "    (2): Linear(in_features=10, out_features=10, bias=True)\n",
        "    (3): Linear(in_features=10, out_features=9, bias=False)\n",
        "  )\n",
        ")"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,50 +194,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[ 11.0055,  15.3589,   8.2809,   6.8677,  14.8731,  10.9445,  21.4909,\n",
-      "          10.0609,   9.6480],\n",
-      "        [ -7.7150, -10.4823, -18.2218, -11.7193,   2.1209,  -9.6300,  -8.6503,\n",
-      "         -10.0324,   2.7475],\n",
-      "        [  5.1997,  -6.2795,  -0.4463,   1.3481,   1.1025,   1.9049,   1.9214,\n",
-      "          -0.2725,   3.0070],\n",
-      "        [ -9.4011,   2.2561,  -0.4023,   2.9498,   3.5961,   0.2800,  -0.8867,\n",
-      "           6.4764,   1.0052],\n",
-      "        [  2.4483,   4.7913,   1.2583,   4.6639,  -7.3499,   2.8749,   1.4881,\n",
-      "           1.9828,  -2.7216],\n",
-      "        [  7.9259,  -5.7664,   3.0979,   4.1033,   3.8198,   7.1183,   6.8119,\n",
-      "           2.6324,   5.1645],\n",
-      "        [  5.9190,   4.3122,   5.9192,   3.6975,  -8.7227,  -0.4677,   3.7314,\n",
-      "          -3.4629,  -1.3713],\n",
-      "        [  7.7114,   3.7077,   0.4748,  -0.4291,  -0.7820,   1.3426,   6.6008,\n",
-      "           2.8977,  -8.0057],\n",
-      "        [ -2.7740,  -3.7870,  -6.4784,  -0.0640,  -5.3700,  -9.8601,  -9.7806,\n",
-      "          -5.8107,  -5.3476],\n",
-      "        [  6.3015,  12.6781,   8.3272,   3.4601,  -1.2599,   5.7796,  12.4307,\n",
-      "           1.2595,  -6.4999]], device='cuda:0', grad_fn=<MmBackward>)\n",
+      "tensor([[ 9.1482e+00,  1.7134e+01,  5.5038e+00,  7.1094e+00,  1.8042e+01,\n",
+      "          1.2420e+01,  2.3254e+01,  1.0813e+01,  8.8139e+00],\n",
+      "        [-1.1975e+01, -5.5618e+00, -1.9245e+01, -1.2707e+01,  1.6361e+00,\n",
+      "         -1.0373e+01, -1.0418e+01, -7.5755e+00,  8.4142e+00],\n",
+      "        [ 6.5693e+00, -6.6130e+00,  1.7501e-01,  7.4219e-01,  2.9382e+00,\n",
+      "          2.0685e+00, -9.5737e-02, -9.0795e-01,  2.9395e+00],\n",
+      "        [-1.1448e+01,  1.1901e+01, -3.2770e+00,  4.5974e-01,  1.1652e+01,\n",
+      "         -2.9454e+00, -8.2134e-01,  3.3243e+00,  1.1987e+00],\n",
+      "        [ 4.2202e+00,  8.4472e+00,  1.6200e+00,  3.3807e+00, -5.7340e+00,\n",
+      "          1.7241e+00,  8.5370e-01,  1.0267e+00, -1.3967e+00],\n",
+      "        [ 7.9780e+00, -7.1432e+00,  9.6349e-01, -1.7430e-02,  4.4788e+00,\n",
+      "          3.9420e+00,  3.1346e+00, -1.2931e+00,  1.5249e+00],\n",
+      "        [ 6.1263e+00,  6.1646e+00,  6.1965e+00,  2.9349e+00, -7.8680e+00,\n",
+      "         -8.9098e-02,  3.3975e+00, -2.8526e+00, -2.3372e+00],\n",
+      "        [ 8.1586e+00,  5.3207e-01, -3.4728e+00, -3.9802e+00, -1.1471e+00,\n",
+      "         -6.4116e-01,  6.0744e+00,  2.5119e+00, -6.3930e+00],\n",
+      "        [-6.8672e+00, -8.7894e-01, -2.0408e+00,  1.7870e+00, -8.4867e+00,\n",
+      "         -9.8742e+00, -1.5552e+01, -5.7456e+00, -2.5390e+00],\n",
+      "        [ 9.9643e+00,  8.0697e+00,  9.7241e+00,  5.6611e+00, -9.5353e-01,\n",
+      "          8.6314e+00,  9.8434e+00, -2.1285e-01, -4.5808e+00]], device='cuda:0',\n",
+      "       grad_fn=<MmBackward>)\n",
       "torch.Size([10, 9])\n",
-      "test_out=tensor([[  6.8677],\n",
-      "        [-18.2218],\n",
-      "        [ -6.2795],\n",
-      "        [ -9.4011],\n",
-      "        [ -7.3499],\n",
-      "        [ -5.7664],\n",
-      "        [ -8.7227],\n",
-      "        [ -8.0057],\n",
-      "        [ -9.8601],\n",
-      "        [ -6.4999]], device='cuda:0', grad_fn=<MinBackward0>)\n"
+      "test_out=tensor([[  5.5038],\n",
+      "        [-19.2454],\n",
+      "        [ -6.6130],\n",
+      "        [-11.4482],\n",
+      "        [ -5.7340],\n",
+      "        [ -7.1432],\n",
+      "        [ -7.8680],\n",
+      "        [ -6.3930],\n",
+      "        [-15.5518],\n",
+      "        [ -4.5808]], device='cuda:0', grad_fn=<MinBackward0>)\n",
+      "targets=tensor([7, 2, 1, 0, 4, 1, 4, 9, 5, 9])\n"
      ]
     }
    ],
    "source": [
     "test_out=verification_model(data.cuda().view(-1,784))\n",
     "print(f'test_out={test_out}')\n",
+    "print(f'targets={target}')\n",
     "# print(f'test_out[0]={test_out[0]}')"
    ]
   },
